Create service, controller, util, repository, model, constant and Dockerfile.

--- a/invt/src/main/resources/application.properties
+++ b/invt/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Sets the name of the application
 spring.application.name=invt
+
+# Sets the base context path for all endpoints
+server.servlet.context-path=/api
+
+# Ensures that error messages are included in the response body
+server.error.include-message=always
